force-app/main/default/objects/Invoice_Snapshot__c/Invoice_Snapshot__c.object-meta.xml
<CustomObject>
    <label>Invoice Snapshot</label>
    <nameField>
        <displayFormat>IN-{0000000000}</displayFormat>
        <label>Invoice</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Invoice Snapshots</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>