force-app/main/default/objects/Invoice_Snapshot__c/fields/Apply_Late_Fee__c.field-meta.xml
<CustomField>
    <fullName>Apply_Late_Fee__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Apply Late Fee</label>
    <type>Checkbox</type>
</CustomField>