force-app/main/default/objects/Invoice_Snapshot__c/fields/AR_Status__c.field-meta.xml
<CustomField>
    <fullName>AR_Status__c</fullName>
    <label>AR Status</label>
    <length>12</length>
    <type>Text</type>
</CustomField>