force-app/main/default/objects/Invoice_Snapshot__c/fields/AR_Type__c.field-meta.xml
<CustomField>
    <fullName>AR_Type__c</fullName>
    <label>AR Type</label>
    <length>50</length>
    <type>Text</type>
</CustomField>