force-app/main/default/objects/Invoice_Snapshot__c/fields/Biller_Name__c.field-meta.xml
<CustomField>
    <fullName>Biller_Name__c</fullName>
    <label>Biller Name</label>
    <length>150</length>
    <type>Text</type>
</CustomField>