force-app/main/default/objects/Invoice_Snapshot__c/fields/Brand_Quote__c.field-meta.xml
<CustomField>
    <fullName>Brand_Quote__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Brand Quote</label>
    <referenceTo>Brand_Quote__c</referenceTo>
    <relationshipLabel>Invoice Snapshots</relationshipLabel>
    <relationshipName>Invoice_Snapshots</relationshipName>
    <type>Lookup</type>
</CustomField>