force-app/main/default/objects/Invoice_Snapshot__c/fields/Chart_of_Account__c.field-meta.xml
<CustomField>
    <fullName>Chart_of_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Chart of Account</label>
    <referenceTo>Chart_of_Account__c</referenceTo>
    <relationshipLabel>Invoice Snapshots</relationshipLabel>
    <relationshipName>Invoice_Snapshots</relationshipName>
    <type>Lookup</type>
</CustomField>