force-app/main/default/objects/Invoice_Snapshot__c/fields/Collections_Status__c.field-meta.xml
<CustomField>
    <fullName>Collections_Status__c</fullName>
    <label>Collections Status</label>
    <length>100</length>
    <type>Text</type>
</CustomField>