force-app/main/default/objects/Invoice_Snapshot__c/fields/Cultivation_Tax_Balance__c.field-meta.xml
<CustomField>
    <fullName>Cultivation_Tax_Balance__c</fullName>
    <label>Cultivation Tax Balance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>