force-app/main/default/objects/Invoice_Snapshot__c/fields/Display_Sample_Order__c.field-meta.xml
<CustomField>
    <fullName>Display_Sample_Order__c</fullName>
    <label>Display Sample Order</label>
    <length>150</length>
    <type>Text</type>
</CustomField>