force-app/main/default/objects/Invoice_Snapshot__c/fields/Distributor_Address__c.field-meta.xml
<CustomField>
    <fullName>Distributor_Address__c</fullName>
    <label>Distributor Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>