force-app/main/default/objects/Invoice_Snapshot__c/fields/Distributor_Contact__c.field-meta.xml
<CustomField>
    <fullName>Distributor_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Distributor Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Invoice Snapshots</relationshipLabel>
    <relationshipName>Invoice_Snapshots</relationshipName>
    <type>Lookup</type>
</CustomField>