force-app/main/default/objects/Invoice_Snapshot__c/fields/Distributor_License__c.field-meta.xml
<CustomField>
    <fullName>Distributor_License__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Distributor License</label>
    <referenceTo>State_Licenses__c</referenceTo>
    <relationshipLabel>Invoice Snapshots</relationshipLabel>
    <relationshipName>Invoice_Snapshots</relationshipName>
    <type>Lookup</type>
</CustomField>