force-app/main/default/objects/Invoice_Snapshot__c/fields/Distributor_License_Class__c.field-meta.xml
<CustomField>
    <fullName>Distributor_License_Class__c</fullName>
    <label>Distributor License Class</label>
    <length>150</length>
    <type>Text</type>
</CustomField>