force-app/main/default/objects/Invoice_Snapshot__c/fields/Distributor_License_Expiration_Date__c.field-meta.xml
<CustomField>
    <fullName>Distributor_License_Expiration_Date__c</fullName>
    <label>Distributor License Expiration Date</label>
    <type>Date</type>
</CustomField>