force-app/main/default/objects/Invoice_Snapshot__c/fields/Distributor_Name__c.field-meta.xml
<CustomField>
    <fullName>Distributor_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Distributor Name</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Invoice Snapshots</relationshipLabel>
    <relationshipName>Invoice_Snapshots</relationshipName>
    <type>Lookup</type>
</CustomField>