force-app/main/default/objects/Invoice_Snapshot__c/fields/Excise_Tax_Balance__c.field-meta.xml
<CustomField>
    <fullName>Excise_Tax_Balance__c</fullName>
    <label>Excise Tax Balance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>