force-app/main/default/objects/Invoice_Snapshot__c/fields/Excise_Tax_Offset__c.field-meta.xml
<CustomField>
    <fullName>Excise_Tax_Offset__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Excise Tax Offset</label>
    <type>Checkbox</type>
</CustomField>