force-app/main/default/objects/Invoice_Snapshot__c/fields/Factored_Payable_Amount__c.field-meta.xml
<CustomField>
    <fullName>Factored_Payable_Amount__c</fullName>
    <label>Factored Payable Amount</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>