force-app/main/default/objects/Invoice_Snapshot__c/fields/Factoring_Assignee__c.field-meta.xml
<CustomField>
    <fullName>Factoring_Assignee__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Factoring Assignee</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Invoice Snapshots (Factoring Assignee)</relationshipLabel>
    <relationshipName>Invoice_Snapshots1</relationshipName>
    <type>Lookup</type>
</CustomField>