force-app/main/default/objects/Invoice_Snapshot__c/fields/Factoring_Contact__c.field-meta.xml
<CustomField>
    <fullName>Factoring_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Factoring Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Invoice Snapshots (Factoring Contact)</relationshipLabel>
    <relationshipName>Invoice_Snapshots1</relationshipName>
    <type>Lookup</type>
</CustomField>