force-app/main/default/objects/Invoice_Snapshot__c/fields/Factoring_Contact_Email__c.field-meta.xml
<CustomField>
    <fullName>Factoring_Contact_Email__c</fullName>
    <label>Factoring Contact Email</label>
    <type>Email</type>
</CustomField>