force-app/main/default/objects/Invoice_Snapshot__c/fields/Factoring_Discount__c.field-meta.xml
<CustomField>
    <fullName>Factoring_Discount__c</fullName>
    <label>Factoring Discount</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>