force-app/main/default/objects/Invoice_Snapshot__c/fields/FG_Opportunity_Name__c.field-meta.xml
<CustomField>
    <fullName>FG_Opportunity_Name__c</fullName>
    <label>FG Opportunity Name</label>
    <length>150</length>
    <type>Text</type>
</CustomField>