force-app/main/default/objects/Invoice_Snapshot__c/fields/FG_Record_Type__c.field-meta.xml
<CustomField>
    <fullName>FG_Record_Type__c</fullName>
    <label>FG Record Type</label>
    <length>20</length>
    <type>Text</type>
</CustomField>