force-app/main/default/objects/Invoice_Snapshot__c/fields/Invoice_Aged__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Aged__c</fullName>
    <label>Invoice Aged</label>
    <precision>7</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>