force-app/main/default/objects/Invoice_Snapshot__c/fields/Invoice_Memo__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Memo__c</fullName>
    <label>Invoice Memo</label>
    <length>2500</length>
    <type>LongTextArea</type>
</CustomField>