force-app/main/default/objects/Invoice_Snapshot__c/fields/Invoice_Name__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Name__c</fullName>
    <label>Invoice Name</label>
    <length>20</length>
    <type>Text</type>
</CustomField>