force-app/main/default/objects/Invoice_Snapshot__c/fields/Is_Receiver__c.field-meta.xml
<CustomField>
    <fullName>Is_Receiver__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Receiver</label>
    <type>Checkbox</type>
</CustomField>