force-app/main/default/objects/Invoice_Snapshot__c/fields/Late_Fee_Amount__c.field-meta.xml
<CustomField>
    <fullName>Late_Fee_Amount__c</fullName>
    <label>Late Fee Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>