force-app/main/default/objects/Invoice_Snapshot__c/fields/Likelihood_Pmt_Late__c.field-meta.xml
<CustomField>
    <fullName>Likelihood_Pmt_Late__c</fullName>
    <label>Likelihood Pmt Late</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>