force-app/main/default/objects/Invoice_Snapshot__c/fields/Listing_Fee__c.field-meta.xml
<CustomField>
    <fullName>Listing_Fee__c</fullName>
    <label>Listing Fee</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>