force-app/main/default/objects/Invoice_Snapshot__c/fields/Next_Payable_Date__c.field-meta.xml
<CustomField>
    <fullName>Next_Payable_Date__c</fullName>
    <label>Next Payable Date</label>
    <type>Date</type>
</CustomField>