force-app/main/default/objects/Invoice_Snapshot__c/fields/Order_Booking_Fee__c.field-meta.xml
<CustomField>
    <fullName>Order_Booking_Fee__c</fullName>
    <label>Order Booking Fee</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>