force-app/main/default/objects/Invoice_Snapshot__c/fields/Order_Type__c.field-meta.xml
<CustomField>
    <fullName>Order_Type__c</fullName>
    <label>Order Type</label>
    <length>21</length>
    <type>Text</type>
</CustomField>