force-app/main/default/objects/Invoice_Snapshot__c/fields/Ownership__c.field-meta.xml
<CustomField>
    <fullName>Ownership__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Ownership</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Invoice Snapshots (Ownership)</relationshipLabel>
    <relationshipName>Invoice_Snapshots2</relationshipName>
    <type>Lookup</type>
</CustomField>