force-app/main/default/objects/Invoice_Snapshot__c/fields/Payment_Terms__c.field-meta.xml
<CustomField>
    <fullName>Payment_Terms__c</fullName>
    <label>Payment Terms</label>
    <length>20</length>
    <type>Text</type>
</CustomField>