force-app/main/default/objects/Invoice_Snapshot__c/fields/Prepayment__c.field-meta.xml
<CustomField>
    <fullName>Prepayment__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Prepayment</label>
    <type>Checkbox</type>
</CustomField>