force-app/main/default/objects/Invoice_Snapshot__c/fields/Product_Balance__c.field-meta.xml
<CustomField>
    <fullName>Product_Balance__c</fullName>
    <label>Product Balance</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>