force-app/main/default/objects/Invoice_Snapshot__c/fields/R_D_Services__c.field-meta.xml
<CustomField>
    <fullName>R_D_Services__c</fullName>
    <defaultValue>false</defaultValue>
    <label>R&amp;D Services</label>
    <type>Checkbox</type>
</CustomField>