force-app/main/default/objects/Invoice_Snapshot__c/fields/Receiver_Address__c.field-meta.xml
<CustomField>
    <fullName>Receiver_Address__c</fullName>
    <label>Receiver Address</label>
    <length>150</length>
    <type>Text</type>
</CustomField>