force-app/main/default/objects/Invoice_Snapshot__c/fields/Receiver_City_State_Zip__c.field-meta.xml
<CustomField>
    <fullName>Receiver_City_State_Zip__c</fullName>
    <label>Receiver City, State, Zip</label>
    <length>250</length>
    <type>Text</type>
</CustomField>