force-app/main/default/objects/Invoice_Snapshot__c/fields/Receiver_Contact__c.field-meta.xml
<CustomField>
    <fullName>Receiver_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Receiver Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Invoice Snapshots (Receiver Contact)</relationshipLabel>
    <relationshipName>Invoice_Snapshots2</relationshipName>
    <type>Lookup</type>
</CustomField>