force-app/main/default/objects/Invoice_Snapshot__c/fields/Receiver_DBA__c.field-meta.xml
<CustomField>
    <fullName>Receiver_DBA__c</fullName>
    <label>Receiver DBA</label>
    <length>150</length>
    <type>Text</type>
</CustomField>