force-app/main/default/objects/Invoice_Snapshot__c/fields/Receiver_First_Name__c.field-meta.xml
<CustomField>
    <fullName>Receiver_First_Name__c</fullName>
    <label>Receiver First Name</label>
    <length>150</length>
    <type>Text</type>
</CustomField>