force-app/main/default/objects/Invoice_Snapshot__c/fields/Receiver_ID__c.field-meta.xml
<CustomField>
    <fullName>Receiver_ID__c</fullName>
    <label>Receiver ID</label>
    <length>60</length>
    <type>Text</type>
</CustomField>