force-app/main/default/objects/Invoice_Snapshot__c/fields/Receiver_License__c.field-meta.xml
<CustomField>
    <fullName>Receiver_License__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Receiver License</label>
    <referenceTo>State_Licenses__c</referenceTo>
    <relationshipLabel>Invoice Snapshots (Receiver License)</relationshipLabel>
    <relationshipName>Invoice_Snapshots1</relationshipName>
    <type>Lookup</type>
</CustomField>