force-app/main/default/objects/Invoice_Snapshot__c/fields/Receiver_License_Class__c.field-meta.xml
<CustomField>
    <fullName>Receiver_License_Class__c</fullName>
    <label>Receiver License Class</label>
    <length>100</length>
    <type>Text</type>
</CustomField>