force-app/main/default/objects/Invoice_Snapshot__c/fields/Receiver_License_Expiration_Date__c.field-meta.xml
<CustomField>
    <fullName>Receiver_License_Expiration_Date__c</fullName>
    <label>Receiver License Expiration Date</label>
    <type>Date</type>
</CustomField>