force-app/main/default/objects/Invoice_Snapshot__c/fields/Receiver_Name__c.field-meta.xml
<CustomField>
    <fullName>Receiver_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Receiver Name</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Invoice Snapshots (Receiver Name)</relationshipLabel>
    <relationshipName>Invoice_Snapshots3</relationshipName>
    <type>Lookup</type>
</CustomField>