force-app/main/default/objects/Invoice_Snapshot__c/fields/Receiver_Phone__c.field-meta.xml
<CustomField>
    <fullName>Receiver_Phone__c</fullName>
    <label>Receiver Phone</label>
    <length>16</length>
    <type>Text</type>
</CustomField>