force-app/main/default/objects/Invoice_Snapshot__c/fields/Receiver_Zone__c.field-meta.xml
<CustomField>
    <fullName>Receiver_Zone__c</fullName>
    <label>Receiver Zone</label>
    <length>100</length>
    <type>Text</type>
</CustomField>