force-app/main/default/objects/Invoice_Snapshot__c/fields/Retailer_PO__c.field-meta.xml
<CustomField>
    <fullName>Retailer_PO__c</fullName>
    <label>Retailer PO</label>
    <length>150</length>
    <type>Text</type>
</CustomField>