force-app/main/default/objects/Invoice_Snapshot__c/fields/Sales_Order__c.field-meta.xml
<CustomField>
    <fullName>Sales_Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sales Order</label>
    <referenceTo>Sales_Order__c</referenceTo>
    <relationshipLabel>Invoice Snapshots</relationshipLabel>
    <relationshipName>Invoice_Snapshots</relationshipName>
    <type>Lookup</type>
</CustomField>