force-app/main/default/objects/Invoice_Snapshot__c/fields/Schedule_Dispatch_Fee__c.field-meta.xml
<CustomField>
    <fullName>Schedule_Dispatch_Fee__c</fullName>
    <label>Schedule &amp; Dispatch Fee</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>