force-app/main/default/objects/Invoice_Snapshot__c/fields/Site__c.field-meta.xml
<CustomField>
    <fullName>Site__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Site</label>
    <referenceTo>Site__c</referenceTo>
    <relationshipLabel>Invoice Snapshots</relationshipLabel>
    <relationshipName>Invoice_Snapshots</relationshipName>
    <type>Lookup</type>
</CustomField>