force-app/main/default/objects/Invoice_Snapshot__c/fields/Sold_To_Party__c.field-meta.xml
<CustomField>
    <fullName>Sold_To_Party__c</fullName>
    <label>Sold To Party</label>
    <length>255</length>
    <type>Text</type>
</CustomField>