force-app/main/default/objects/Invoice_Snapshot__c/fields/Supplier_Address__c.field-meta.xml
<CustomField>
    <fullName>Supplier_Address__c</fullName>
    <label>Supplier Address</label>
    <length>150</length>
    <type>Text</type>
</CustomField>