force-app/main/default/objects/Invoice_Snapshot__c/fields/Supplier_Contact__c.field-meta.xml
<CustomField>
    <fullName>Supplier_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Supplier Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Invoice Snapshots (Supplier Contact)</relationshipLabel>
    <relationshipName>Invoice_Snapshots3</relationshipName>
    <type>Lookup</type>
</CustomField>