force-app/main/default/objects/Invoice_Snapshot__c/fields/Supplier_DBA__c.field-meta.xml
<CustomField>
    <fullName>Supplier_DBA__c</fullName>
    <label>Supplier DBA</label>
    <length>150</length>
    <type>Text</type>
</CustomField>