force-app/main/default/objects/Invoice_Snapshot__c/fields/Supplier_License__c.field-meta.xml
<CustomField>
    <fullName>Supplier_License__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Supplier License</label>
    <referenceTo>State_Licenses__c</referenceTo>
    <relationshipLabel>Invoice Snapshots (Supplier License)</relationshipLabel>
    <relationshipName>Invoice_Snapshots2</relationshipName>
    <type>Lookup</type>
</CustomField>