force-app/main/default/objects/Invoice_Snapshot__c/fields/Supplier_License_Class__c.field-meta.xml
<CustomField>
    <fullName>Supplier_License_Class__c</fullName>
    <label>Supplier License Class</label>
    <length>30</length>
    <type>Text</type>
</CustomField>