force-app/main/default/objects/Invoice_Snapshot__c/fields/Supplier_License_Expiration_Date__c.field-meta.xml
<CustomField>
    <fullName>Supplier_License_Expiration_Date__c</fullName>
    <label>Supplier License Expiration Date</label>
    <type>Date</type>
</CustomField>