force-app/main/default/objects/Invoice_Snapshot__c/fields/Supplier_License_Type__c.field-meta.xml
<CustomField>
    <fullName>Supplier_License_Type__c</fullName>
    <label>Supplier License Type</label>
    <length>150</length>
    <type>Text</type>
</CustomField>