force-app/main/default/objects/Invoice_Snapshot__c/fields/Supplier_Name__c.field-meta.xml
<CustomField>
    <fullName>Supplier_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Supplier Name</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Invoice Snapshots (Supplier Name)</relationshipLabel>
    <relationshipName>Invoice_Snapshots4</relationshipName>
    <type>Lookup</type>
</CustomField>