force-app/main/default/objects/Invoice_Snapshot__c/fields/Supplier_Zone__c.field-meta.xml
<CustomField>
    <fullName>Supplier_Zone__c</fullName>
    <label>Supplier Zone</label>
    <length>30</length>
    <type>Text</type>
</CustomField>