force-app/main/default/objects/Invoice_Snapshot__c/fields/Tax_Payment_Validation__c.field-meta.xml
<CustomField>
    <fullName>Tax_Payment_Validation__c</fullName>
    <label>Tax Payment Validation</label>
    <length>150</length>
    <type>Text</type>
</CustomField>