force-app/main/default/objects/Invoice_Snapshot__c/fields/Total_Cultivation_Tax__c.field-meta.xml
<CustomField>
    <fullName>Total_Cultivation_Tax__c</fullName>
    <label>Total Cultivation Tax</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>