force-app/main/default/objects/Invoice_Snapshot__c/fields/Total_Excise_Tax_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_Excise_Tax_Amount__c</fullName>
    <label>Total Excise Tax Amount</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>