force-app/main/default/objects/Invoice_Snapshot__c/fields/Total_Invoice_Amount_Incl_Late_Fee__c.field-meta.xml
<CustomField>
    <fullName>Total_Invoice_Amount_Incl_Late_Fee__c</fullName>
    <label>Total Invoice Amount (Incl Late Fee)</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>