force-app/main/default/objects/Invoice_Snapshot__c/fields/Total_Product_Price__c.field-meta.xml
<CustomField>
    <fullName>Total_Product_Price__c</fullName>
    <label>Total Product Price</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>