force-app/main/default/objects/Invoice_Snapshot__c/fields/Total_QA_Review_Fee__c.field-meta.xml
<CustomField>
    <fullName>Total_QA_Review_Fee__c</fullName>
    <label>Total QA Review Fee</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>