force-app/main/default/objects/Invoice_Snapshot__c/fields/Total_Weight_lbs__c.field-meta.xml
<CustomField>
    <fullName>Total_Weight_lbs__c</fullName>
    <label>Total Weight (lbs)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>