force-app/main/default/objects/Invoice_Snapshot__c/fields/TotalInvoiceAmountLateFee__c.field-meta.xml
<CustomField>
    <fullName>TotalInvoiceAmountLateFee__c</fullName>
    <label>TotalInvoiceAmountLateFee</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>