force-app/main/default/objects/Invoice_Snapshot__c/fields/Transfer_Shipping_Manifest__c.field-meta.xml
<CustomField>
    <fullName>Transfer_Shipping_Manifest__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Transfer Shipping Manifest</label>
    <referenceTo>Transfer_Shipping_Manifest__c</referenceTo>
    <relationshipLabel>Invoice Snapshots</relationshipLabel>
    <relationshipName>Invoice_Snapshots</relationshipName>
    <type>Lookup</type>
</CustomField>